[metadata]
name = nagare
author = Alain Poirier
author_email = alain.poirier@net-ng.com
description = Nagare Python web framework
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
keywords = web, framework, sqlalchemy, continuation, ajax, stackless
url = http://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/core
    Tracker = https://github.com/nagareproject/core/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: Web Environment
    Operating System :: Microsoft :: Windows :: Windows NT/2000
    Operating System :: Unix
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    WebOb
    cryptography
    nagare-partial
    nagare-editor
    nagare-server-mvc
    nagare-services-sessions
    nagare-renderers-html
    nagare-services-i18n

[options.extras_require]
dev =
    nagare-services-webassets
    closure
    PyYAML

[options.entry_points]
nagare.services =
    exceptions = nagare.services.core_exceptions:ExceptionsService
    state = nagare.services.state:StateService
    create_root = nagare.services.create_root:RootService
    redirect_after_post = nagare.services.prg:PRGService
    callbacks = nagare.services.callbacks:CallbacksService
    core_static = nagare.services.core_static:CoreStaticService

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
        .eggs,
	doc,
        test,
	static,
	nagare/pyjs.py

[extract_messages]
keywords = _ , _N:1,2 , _L , _LN:1,2 , gettext , ugettext , ngettext:1,2 , ungettext:1,2 , lazy_gettext , lazy_ugettext , lazy_ngettext:1,2 , lazy_ungettext:1,2
output_file = nagare/data/locale/nagare.pot

[init_catalog]
input_file = nagare/data/locale/nagare.pot
output_dir = nagare/data/locale
domain = nagare

[update_catalog]
input_file = nagare/data/locale/nagare.pot
output_dir = negare/data/locale
domain = nagare

[compile_catalog]
directory = nagare/data/locale
domain = nagare
